fix style of svg on safari

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -573,6 +573,7 @@ input[type=checkbox]:checked + .togglebutton::before {
     margin: 0px 5px;
     min-width: 38px;
     max-width: 38px;
+    height: 38px;
     opacity: 0.7;
     transition: opacity 0.1s ease;
     cursor: pointer;
